--- a/source/widget/studyCourse/study-course.less
+++ b/source/widget/studyCourse/study-course.less
@@ -15,12 +15,10 @@
 @fs:					"SimSun";
 
 //学习课程页样式
-#stude-course-container {
-	background: #f9f9f9;
-	.ui-margin {width: 980px;margin: 0 auto;overflow: hidden;}
+		.ui-margin {width: 980px;margin: 0 auto;overflow: hidden;}
 		h2.content-study-title {
-			height:47px;line-height:47px;font-size:16px;font-weight:normal;color:#333333;padding-left:10px;
-			strong {font-size:14px;color: #e74c3c;font-weight: normal;}
+			line-height:180%;font-size:16px;margin-bottom: 10px;
+			strong {font-size:14px;color: #e74c3c;}
 		}
 		//课程视频和列表
 		.content-study-player {
@@ -190,7 +188,7 @@
 		    }
 		}
 		// 看点end
-}
+
 
 
 /*
