--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -12,28 +12,31 @@
 .ui-head-nav {
     height: 45px;
     margin: 0 auto;
-    position: relative;
     font-size: 14px;
-    ul.head-nav {
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-        padding-left: 210px;
-        font-size: 16px;
-        li {
-            float: left;
-            width: 70px;
-            line-height: 45px;
-            text-align: center;
-            list-style: none;
-            a {
-                &:hover {
-                    color: #3bafda;
-                }
-            }
-            &.current {
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+    .container {
+        position: relative;
+        ul.head-nav {
+            overflow: hidden;
+            margin: 0;
+            padding: 0;
+            padding-left: 210px;
+            font-size: 16px;
+            li {
+                float: left;
+                width: 70px;
+                line-height: 45px;
+                text-align: center;
+                list-style: none;
                 a {
-                    color: #3bafda;
+                    &:hover {
+                        color: #3bafda;
+                    }
+                }
+                &.current {
+                    a {
+                        color: #3bafda;
+                    }
                 }
             }
         }
@@ -77,7 +80,7 @@
             color: #fff;
             display: block;
             font: 400 15px/44px "microsoft yahei";
-            height: 44px;
+            height: 45px;
             padding: 0 20px;
             margin: 0;
             background: #1e89e0;
