--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -99,9 +99,15 @@ em {
     width: 1050px !important;
     padding-left: 0;
     padding-right: 0;
+    &.wrap-mall {
+        width: 930px !important;
+    }
 }
 .wrap-side {
     width: 130px;
+    &.wrap-mall {
+        width: 240px !important;
+    }
 }
 .alert-warning {
     border-color: transparent;
@@ -153,5 +159,6 @@ em {
         .panel-heading {
             border-color: #EFEFEF;
         }
+        box-shadow: none;
     }
 }
