--- a/source/widget/UserHome.gold/gold.css
+++ b/source/widget/UserHome.gold/gold.css
@@ -560,12 +560,14 @@ table tr td {
 .present-address-box span {
   font-size: 16px;
 }
-.red-card-tip div {
+.red-card-tip div,
+.present-card-tip div {
   padding: 0;
   height: 30px;
   text-align: center;
 }
-.red-card-tip div span {
+.red-card-tip div span,
+.present-card-tip div span {
   height: 30px;
   line-height: 30px;
   color: #333;
