--- a/source/widget/UM.all.order/all.order.css
+++ b/source/widget/UM.all.order/all.order.css
@@ -42,16 +42,16 @@
   font-size: 12px;
 }
 .ao-content .some-order .ao-title .ao-first {
-  width: 575px;
+  width: 57%;
 }
 .ao-content .some-order .ao-title .ao-second {
-  width: 160px;
+  width: 16%;
 }
 .ao-content .some-order .ao-title .ao-third {
-  width: 115px;
+  width: 12%;
 }
 .ao-content .some-order .ao-title .ao-fourth {
-  width: 155px;
+  width: 15%;
 }
 .ao-content .some-order .ao-details {
   height: 1%;
@@ -114,7 +114,6 @@
   padding: 1px 8px;
   border-radius: 3px;
   font-style: normal;
-  font-size: 12px;
   color: #fff;
   background-color: #ffbc3c;
 }
@@ -146,35 +145,15 @@
   margin: 0 25px;
 }
 .ao-content .some-order .ao-details ul li .ao-operation span a {
-  font-family: "SimSun";
   font-size: 12px;
+  font-family: "SimSun";
   color: #333;
 }
 .ao-content .some-order .ao-details ul li .ao-operation button {
   width: 100px;
-  height: 30px;
   margin-bottom: 12px;
-  padding: 0;
-  border-radius: 3px;
   font-family: "simsun";
   font-size: 14px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-style: solid;
-  border-width: 0;
-  background-color: #3BAFDA;
-  border-color: #2392ba;
-  color: #FFFFFF;
-  transition: background-color 300ms ease-out;
-}
-.ao-content .some-order .ao-details ul li .ao-operation button:hover {
-  background-color: #2392ba;
-}
-.ao-content .some-order .ao-details ul li .ao-operation .alert {
-  background-color: #e74c3c;
-}
-.ao-content .some-order .ao-details ul li .ao-operation .alert:hover {
-  background-color: #bf2c1d;
 }
 .ao-content .some-order .ao-details ul .ao-li {
   margin-top: 20px;
