--- a/source/widget/UM.all.order/all.order.less
+++ b/source/widget/UM.all.order/all.order.less
@@ -43,16 +43,16 @@
                 font-size: 12px;
             }
             .ao-first{
-                width: 575px;
+                width: 57%;
             }
             .ao-second{
-                width: 160px;
+                width: 16%;
             }
             .ao-third{
-                width: 115px;
+                width: 12%;
             }
             .ao-fourth{
-                width: 155px;
+                width: 15%;
             }
         }
         .ao-details{
