--- a/source/widget/UM.head.photo/head.photo.css
+++ b/source/widget/UM.head.photo/head.photo.css
@@ -56,7 +56,7 @@
   margin-bottom: 20px;
   background-color: #eee;
 }
-.hp-content .hp-box-left .hp-local .hl-box #preview {
+.hp-content .hp-box-left .hp-local .hl-box #preview #imghead {
   max-width: 400px;
   max-height: 340px;
 }
