--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -59,8 +59,10 @@
                 margin-bottom: 20px;
                 background-color: #eee;
                 #preview{
-                    max-width: 400px;
-                    max-height: 340px;
+                    #imghead{
+                        max-width: 400px;
+                        max-height: 340px;
+                    }
                 }
                 .btn_up{
                     .btn_loadFile{
