--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -19,7 +19,6 @@
                 width: 60px;
                 margin: 0 5px 50px 0;
                 text-align: right;
-                font-size: 12px;
                 color: #666;
                 font-weight: normal;
                 cursor: text;
@@ -37,8 +36,22 @@
                 }
             }
             span{
-                margin: 0;
                 color: #333;
+            }
+            .error{
+                display: block;
+                width: 385px;
+                color: #e74c3c;
+                height: 30px;
+                margin-left: 50px;
+                padding-top: 5px;
+                line-height:19px;      
+            }
+            .prompt-empty{
+                display: none;
+                position: absolute;
+                top: 40px;
+                left: 65px;
             }
             em{
                 margin-left: 20px;
@@ -89,9 +102,3 @@
         }
     }
 }
-
-
-
-
-/* 已有网校账号登录
-*/
