--- a/source/widget/perfect-information/perfect-information.less
+++ b/source/widget/perfect-information/perfect-information.less
@@ -1,13 +1,42 @@
 body{
 	background: rgba(0,0,0,0.6)
 }
+.infor-cardModal{
+	.modal-dialog{
+		width: 530px;
+		height: 520px;
+	}
+	.modal-content{
+		width: 530px;
+		height: 520px;
+	}
+	.modal-header{
+		border-bottom: none;
+	}
+}
+.FormList-cardModal{
+	.modal-content{
+		width: 530px;
+		height: 520px;
+		overflow: hidden;
+		background-color: '';
+	}
+	.modal-header{
+		border-bottom: none;
+		min-height: 0;
+		padding: 0;
+	}
+	.modal-body{
+		padding: 0;
+	}
+}
 .information-guid{
-	width: 530px;
-	height: 520px;
+	// width: 530px;
+	// height: 520px;
 	background: #fff;
 	border-radius: 4px;
 	text-align: center;
-	padding: 55px 0 40px 0px;
+	padding: 10px 0 40px 0px;
 	label{
 		font-weight: normal;
 	}
@@ -38,10 +67,8 @@ body{
 	}
 }
 .setting-infor{
-	width: 530px;
-	height: 520px;
 	background: #fff;
-	border-radius: 4px;
+	border-radius: 6px;
 	label{
 		font-weight: normal;
 	}
@@ -73,6 +100,8 @@ body{
 		margin: 0;
 		height: 50px;
 		background: url("img/setting-infor.jpg") no-repeat center center;
+		border-top-left-radius: 4px;
+		border-top-right-radius: 4px;
 		li{
 			width: 50%;
 			text-align: center;
