--- a/source/widget/help/ui-help.less
+++ b/source/widget/help/ui-help.less
@@ -62,7 +62,6 @@
 			top:12px;
 			display: inline-block;
 			padding: 0 10px;
-			z-index: 10;
 			background:#fbfbfb;
 			font-size: 14px;
 
@@ -85,13 +84,14 @@
 
 .ui_mod_help_content {
 		width:980px;
-		margin:0 auto;
+		margin:0 auto 20px;
 		overflow:hidden;
 		.ui_tabs_help {
 			height:76px;
 			overflow:hidden;
 			margin-top:15px; 
 			background:url(img/tabs_bg.png) repeat-x;
+			padding-left: 40px;
 			li {
 				float:left; 
 				display:inline;
