--- a/source/widget/_homework/homework.less
+++ b/source/widget/_homework/homework.less
@@ -53,6 +53,8 @@ html,body {
    }
 }
 .homework-wrapper{
+//    width: 1190px;
+    margin: 20px auto;
     overflow: hidden;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
@@ -366,7 +368,6 @@ html,body {
                   text-align: left;
                   .font-size(14px);
                   color: #333;
-                  letter-spacing: -0.5px;
               }
               em{
                  color: #e74c3c;
@@ -550,15 +551,6 @@ html,body {
             background: #2392ba;
         }
     }
-}
-
-.homework-panel-style.panel {
-   margin-bottom:0;
-   background:none;
-   border:none;
-   border-radius:0;
-   -webkit-box-shadow:none;
-   box-shadow:none;
 }
 
 
