--- a/source/widget/Dynamic/fresh.less
+++ b/source/widget/Dynamic/fresh.less
@@ -813,10 +813,14 @@
 /** 
  * 发送新鲜事Style
  */
-
+.fresh-send-box-modal-dialog{
+  .modal-dialog{
+     width: 800px;
+  }
+}
 .fresh-send-box{
    background: #fff;
-   padding: 10px;
+   width: 100%;
    .font-family;
    overflow: hidden;
    em,i{
@@ -945,17 +949,21 @@
 /**
  *评论验证码弹出层Style
  */
+.fresh-dialog--modal-verification{
+    .modal-dialog{
+       width: 395px;
+    }
+}
 .fresh-dialog-verificationCode{
    background: #fff;
    overflow: hidden;
    .fresh-dialog-content{
-        min-width: 100px;
-        overflow: auto;
-        padding: 25px 20px;
+        padding:10px;
+        overflow: hidden;
+        display: block;
         text-align: center;
         .fresh-dialog-medal {
-            width: 355px;
-            margin: auto;
+             overflow: hidden;
             .fresh-dialog-medal-tips{
                 .font-size(14px);
                 color: @font-color*2;
@@ -971,9 +979,9 @@
             }
             .fresh-dialog-medal-img{
                 overflow: hidden;
-                width: 270px;
-                margin-left: 38px;
+                margin-left: 57px;
                 margin-top: 20px;
+                line-height: 26px;
                 span,input{
                     float: left;
                     display: inline;
@@ -996,13 +1004,15 @@
             }
             #fresh-dialog-tips-Code {
                 color: #cc0000;
-                padding-left: 85px;
                 overflow: hidden;
+                line-height: 20px;
                 height: 20px;
+                display: block;
+                text-align: center;
                 .font-size(12px);
             }
             .fresh-dialog-sure-btn{
-                margin-top: 20px;
+                margin-top: 15px;
                 position: relative;
                 overflow: hidden;
                 a{
@@ -1178,6 +1188,62 @@
 
 .popover{
   max-width: 1000px;
+}
+
+/** 
+ * 新鲜事筛选Style
+ */
+.filter-public-tab{
+   display: block;
+   overflow: hidden;
+   background: #fff;
+   line-height: 30px;
+   padding: 10px 15px;
+   .font-size;
+   .font-family;
+   color:@font-color;
+   .border-radius(4px);
+   border-bottom: 1px solid #eaeaea;
+   a{ 
+      outline:none;
+      &:focus{
+          outline:none;
+      }
+    }
+   .filter-text-style{
+      float: left;
+      color:@font-color*3; 
+      margin-right: 3px;
+   }
+   .filter-nav-list{
+       display: block;
+       overflow: hidden;
+       ul{
+          margin: 0;
+          padding: 0;
+          line-height: 30px;
+          .font-size;
+          li{
+             float: left;
+             margin-right: 20px;
+             list-style: none;
+             a{
+               .font-size;
+               .font-family;
+               color:@font-color;
+               &:hover{
+                  color: #2599c4;
+               }
+             }
+             &.current{
+                 a{
+                    color: #2599c4;
+                 }
+                 
+             }
+          }
+       } 
+   }
 }
 
 
