--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -92,8 +92,10 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .present-address-box form label.present-address-focus{background-color: #ebf7fb;color: #333;}
 .modal-title{color:#666;}
 .modal-body{overflow: hidden;}
-.modal-dialog{width: 740px;}
+//.modal-dialog{width: 740px;}
 .present-address-box span{font-size: 16px;}
+.red-card-tip div,.present-card-tip div{padding:0;height: 30px;text-align: center;}
+.red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 
 
 
