--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -412,10 +412,14 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		margin-bottom: 22px;
 		margin-left: 0;
 	}
+	.material-layout{
+		display: none;
+	}
 	.cant-load{
 		float: right;
 		font-size: 12px;
 		line-height: 30px;
+		color: #3bafda;
 	}
 	li{
 		float: left;
