--- a/source/widget/errorQuestion/error_question.less
+++ b/source/widget/errorQuestion/error_question.less
@@ -2,21 +2,21 @@
 
 
 
-html{
-  font-size: 10px;
-  min-width: 570px;
-}
+//html{
+//  font-size: 10px;
+//  min-width: 570px;
+//}
 
 @Nfont-size:1.3rem;
 @Sfont-size:1rem;
 @LRpadding:0.8rem;
 
-body{
-  background-color: rgb(241,242,246);
-  line-height: 1;
-  font-size: 10px;
-  color:rgb(51,51,51);
-}
+//body{
+//  background-color: rgb(241,242,246);
+//  line-height: 1;
+//  font-size: 10px;
+//  color:rgb(51,51,51);
+//}
 p{
   font-size: @Nfont-size;
 }
