学习中心的我的收藏页面（4个tab页）拼合完成

--- a/source/widget/Public.Module/collectApp.less
+++ b/source/widget/Public.Module/collectApp.less
@@ -15,8 +15,9 @@
 		position: relative;
 		.collect-avatar{
 			float: left;
-			width: 80px;
+			width: 60px;
 			text-align: center;
+			margin-right: 14px;
 			color: #666;
 			font-size: 12px;
 			img{
@@ -27,6 +28,7 @@
 			}
 			span{
 				display: block;
+				text-align: center;
 				width: 100%;
 			}
 		}
