--- a/source/widget/courses/courses.css
+++ b/source/widget/courses/courses.css
@@ -43,9 +43,9 @@ li {
 }
 .course-list {
   font-family: "SimSun";
-  border-top: 1px solid #eaeaea;
+  border-bottom: 1px solid #eaeaea;
   width: 100%;
-  padding: 13px 10px;
+  padding: 12px 0px 0 0;
   overflow: hidden;
 }
 .course-list .btn {
@@ -67,9 +67,10 @@ li {
   font-weight: normal;
 }
 .course-list .ui-avatar {
-  width: 80px;
+  width: 60px;
   text-align: center;
   float: left;
+  margin-right: 14px;
 }
 .course-list .ui-avatar span.ui-user-name {
   font-size: 14px;
