--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -49,9 +49,9 @@ ul,li{list-style: none;}
 }
 .course-list {
 	font-family: "SimSun";
-	border-top: 1px solid @borderColor;
+	border-bottom: 1px solid @borderColor;
 	width: 100%;
-	padding: 13px 10px;
+	padding: 12px 0px 0 0;
 	overflow: hidden;
 	.btn{
 		.border-radius(2px);
@@ -69,9 +69,10 @@ ul,li{list-style: none;}
 		font-weight: normal;
 	}
 	.ui-avatar{
-		width: 80px;
+		width: 60px;
 		text-align: center;
 		float: left;
+		margin-right: 14px;
 		span.ui-user-name{
 			font-size: 14px;
 		}
