--- a/source/widget/glory/glory.css
+++ b/source/widget/glory/glory.css
@@ -3,8 +3,8 @@
   height: 38px;
   border: 1px solid #eaeaea;
   line-height: 38px;
-  margin: 0;
   padding-left: 0;
+  margin: 20px 0;
 }
 .screen-rank li {
   list-style: none;
@@ -21,7 +21,7 @@
 .gloryConPicId {
   overflow: hidden;
   width: 100%;
-  background: rgba(0, 0, 0, 0) url("img/glory-banner.jpg") no-repeat scroll center top;
+  background: rgba(0, 0, 0, 0) url("/static/img/Public.Module/glory-banner.jpg") no-repeat scroll center top;
 }
 .gloryConPicId .gloryConPicId-inner {
   width: 1190px;
@@ -60,12 +60,15 @@
   padding-left: 23px;
   font-family: "SimSun";
 }
+.glory-content.last {
+  margin-right: 0;
+}
 .glory-content {
   margin: 0;
   font-family: 'SimSun';
   display: inline;
   float: left;
-  margin-right: 10px;
+  margin-right: 0.28%;
   overflow: hidden;
   width: 290px;
   padding-left: 0;
@@ -165,7 +168,7 @@
 .glory-window,
 .glory_window_come {
   background: #fff none repeat scroll 0 0;
-  border: 1px solid #eaeaea;
+  border: 1px solid #ccc;
   display: none;
   height: 0;
   position: absolute;
@@ -173,7 +176,7 @@
   z-index: 900;
 }
 .glory_window_come .window_arrow {
-  background: rgba(0, 0, 0, 0) url("http://img04.xesimg.com/glory/glory_window_arrow.png") no-repeat scroll center center;
+  background: url("http://img04.xesimg.com/glory/glory_window_arrow.png") no-repeat scroll center center;
   bottom: -8px;
   height: 10px;
   position: absolute;
