--- a/source/widget/glory/glory.less
+++ b/source/widget/glory/glory.less
@@ -4,8 +4,8 @@
 	height: 38px;
 	border: 1px solid @borderColor;
 	line-height: 38px;
-	margin: 0;
 	padding-left: 0;
+	margin: 20px 0;
 	li{
 		list-style: none;
 		float: left;
@@ -22,7 +22,7 @@
 .gloryConPicId {
 	overflow: hidden;
 	width: 100%;
-	background: rgba(0, 0, 0, 0) url("img/glory-banner.jpg") no-repeat scroll center top;
+	background: rgba(0, 0, 0, 0) url("/static/img/Public.Module/glory-banner.jpg") no-repeat scroll center top;
 	.gloryConPicId-inner{
 		width: 1190px;
 		height: 380px;
@@ -61,12 +61,15 @@
 		}
 	}
 }
+.glory-content.last{
+	margin-right: 0;
+}
 .glory-content {
 	margin: 0;
 	font-family: 'SimSun';
 	display: inline;
 	float: left;
-	margin-right: 10px;
+	margin-right: 0.28%;
 	overflow: hidden;
 	width: 290px;
 	padding-left: 0;
@@ -166,7 +169,7 @@
 }
 .glory-window, .glory_window_come {
 	background: #fff none repeat scroll 0 0;
-	border: 1px solid #eaeaea;
+	border: 1px solid #ccc;
 	display: none;
 	height: 0;
 	position: absolute;
@@ -175,7 +178,7 @@
 }
 .glory_window_come{
 	.window_arrow {
-		background: rgba(0, 0, 0, 0) url("http://img04.xesimg.com/glory/glory_window_arrow.png") no-repeat scroll center center;
+		background: url("http://img04.xesimg.com/glory/glory_window_arrow.png") no-repeat scroll center center;
 		bottom: -8px;
 		height: 10px;
 		position: absolute;
