--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -23,6 +23,6 @@
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{width: 245px;height: 50px;text-align: center;line-height: 50px;}
 .live-blue{background-color: #3bafda}
-
+.liveBreadCrumb{margin-top: 17px;}
 
 
