--- a/source/widget/help/ui-help.less
+++ b/source/widget/help/ui-help.less
@@ -6,10 +6,14 @@
  * @version $Id$
  */
 //右侧内容
+.w-h-198 {
+	.panel-body {
+		padding:0 30px 15px 0;
+	}
+}
  .ui-article {
  	overflow: hidden;
- 	margin: 20px 0;
- 	padding: 10px 30px;
+ 	margin: 20px  0;
  	.article-title {
  		line-height:40px; 
  		font-size:18px; 
