--- a/source/widget/courseInfor/ui-course-infor.css
+++ b/source/widget/courseInfor/ui-course-infor.css
@@ -344,7 +344,6 @@
   height: 30px;
   line-height: 30px;
   font-size: 16px;
-  font-family: "Microsoft YaHei";
 }
 .ui-course-infor-wrap .course-right-teacher .main-teacher-list {
   overflow: hidden;
@@ -549,7 +548,6 @@
 }
 .course-detail .comment-detail-wrap .comment-detail-list .user-pic p {
   font-size: 12px;
-  font-family: "SimSun";
   margin: 0;
   height: 20px;
   line-height: 20px;
@@ -572,8 +570,6 @@
 }
 .course-detail .comment-detail-wrap .comment-detail-list .user-text-box p {
   font-size: 12px;
-  font-family: "SimSun";
-  margin: 0;
 }
 .course-detail .comment-detail-wrap .comment-detail-list .user-text-box .text {
   font-size: 14px;
@@ -606,4 +602,97 @@
   position: absolute;
   left: -9px;
   top: 8px;
+}
+/*
+ * CSS Styles that are needed by jScrollPane for it to operate correctly.
+ *模拟听课页---讲节列表过多时的滚动条
+ * Include this stylesheet in your site or copy and paste the styles below into your stylesheet - jScrollPane
+ * may not operate correctly without them.
+ */
+.jspContainer {
+  overflow: hidden;
+  position: relative;
+}
+.jspPane {
+  position: absolute;
+}
+.jspHorizontalBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 16px;
+  background: red;
+  display: none;
+}
+.jspCap {
+  display: none;
+}
+.jspHorizontalBar .jspCap {
+  float: left;
+}
+.jspHorizontalBar .jspTrack {
+  float: left;
+  height: 100%;
+  display: none;
+}
+.jspHorizontalBar .jspDrag {
+  float: left;
+  height: 100%;
+}
+.jspArrow {
+  background: #50506d;
+  text-indent: -20000px;
+  display: block;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+.jspArrow.jspDisabled {
+  cursor: default;
+  background: #80808d;
+}
+.jspCorner {
+  background: #eeeef4;
+  float: left;
+  height: 100%;
+}
+.jspVerticalBar .jspArrow {
+  height: 16px;
+}
+.jspHorizontalBar .jspArrow {
+  width: 16px;
+  float: left;
+  height: 100%;
+}
+.jspVerticalBar .jspArrow:focus {
+  outline: none;
+}
+.jspVerticalBar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 16px;
+  height: 100%;
+  background: none;
+}
+/*滚动整条背景色*/
+.jspTrack {
+  position: relative;
+  background: none;
+}
+/*滚轮条背景色*/
+.jspDrag {
+  width: 8px;
+  border-radius: 4px;
+  position: relative;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  background: #cccccc repeat-y;
+  margin: 0 auto;
+}
+/* Yuk! CSS Hack for IE6 3 pixel bug :( */
+* html .jspCorner {
+  margin: 0 -3px 0 0;
 }
