--- a/source/widget/courseInfor/ui-course-infor.less
+++ b/source/widget/courseInfor/ui-course-infor.less
@@ -5,14 +5,6 @@
  * @date    2015-10-21 14:22:33
  * @version $Id$
  */
-@fa:					"Arial";
-@fg:					"Georgia";
-@ft:					"Tahoma";
-@fl:					"Lucida Console";
-@fs:					"宋体";
-@fw:					"Microsoft YaHei";
-@fd:					"verdana";
-@fs:					"SimSun";
 //课程详情页---包含直播--录播--免费课
 .ui-course-infor-wrap {
 	width: 1190px;margin:10px auto 20px;overflow: hidden;
@@ -201,7 +193,7 @@
 	.course-right-teacher {
 		width: 240px;border-left: 1px solid #eaeaea;height: 400px;padding-left: 20px;
 		.main-teacher-title {
-			height: 30px;line-height: 30px;font-size: 16px; font-family:@fw;
+			height: 30px;line-height: 30px;font-size: 16px; 
 		}
 		.main-teacher-list {
 			overflow: hidden;border-bottom: 1px dotted #eaeaea;padding:5px 0 15px 0;margin-bottom: 10px;
@@ -350,7 +342,7 @@
 				}
 				
 				p {
-					font-size: 12px;font-family: @fs;margin:0;height: 20px;line-height: 20px;overflow: hidden;
+					font-size: 12px;margin:0;height: 20px;line-height: 20px;overflow: hidden;
 					&.name {color: #333;}
 					&.site {color: #999;}
 				}
@@ -359,7 +351,7 @@
 			.user-text-box {
 				float: right;display: inline;width: 840px;border: 1px solid #ededed;background: #fcfcfc;padding:15px;position: relative;
 				p {
-					font-size: 12px;font-family: @fs;margin:0;
+					font-size: 12px;
 				}
 				.text {font-size: 14px;color: #666;padding-bottom: 20px;}
 				.time {color:#999;}
@@ -392,3 +384,34 @@
 	}
 
 }
+
+/*
+ * CSS Styles that are needed by jScrollPane for it to operate correctly.
+ *模拟听课页---讲节列表过多时的滚动条
+ * Include this stylesheet in your site or copy and paste the styles below into your stylesheet - jScrollPane
+ * may not operate correctly without them.
+ */
+.jspContainer{overflow: hidden;position: relative;}
+.jspPane{position: absolute;}
+.jspHorizontalBar{position: absolute;bottom: 0;left: 0;width: 100%;height: 16px;background: red;display: none;}
+.jspCap{display: none;}
+.jspHorizontalBar .jspCap{float: left;}
+.jspHorizontalBar .jspTrack{float: left;height: 100%;display: none;}
+.jspHorizontalBar .jspDrag{float: left;height: 100%;}
+
+.jspArrow{background: #50506d;text-indent: -20000px;display: block;cursor: pointer;padding: 0;margin: 0;}
+.jspArrow.jspDisabled{cursor: default;background: #80808d;}
+.jspCorner{background: #eeeef4;float: left;height: 100%;}
+
+.jspVerticalBar .jspArrow{height: 16px;}
+.jspHorizontalBar .jspArrow{width: 16px;float: left;height: 100%;}
+.jspVerticalBar .jspArrow:focus{outline: none;}
+.jspVerticalBar{position: absolute;top: 0;right: 0;width: 16px;height: 100%;background: none;}
+/*滚动整条背景色*/
+
+.jspTrack{position: relative;background: none;}
+
+/*滚轮条背景色*/
+.jspDrag{width:8px;border-radius:4px;position: relative;top: 0;left: 0;cursor: pointer;background:#cccccc repeat-y;margin:0 auto;}
+/* Yuk! CSS Hack for IE6 3 pixel bug :( */
+* html .jspCorner{margin: 0 -3px 0 0;}
