商城二级课程筛选页合并

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -351,7 +351,7 @@ ul,li{list-style: none;}
 }
 .hot-course-list{
 	padding: 10px 0;
-	// background: #fcfcfc;
+	background: #fcfcfc;
 	.ui-avatar{
 		margin-right: 10px;
 		width: 40px;
@@ -364,6 +364,7 @@ ul,li{list-style: none;}
 		}
 	}
 	.course-detail{
+		width: 78%;
 		p{
 			margin: 3px 0;
 		}
@@ -655,6 +656,23 @@ ul,li{list-style: none;}
 				float: left;
 				margin-left: 55px;
 			}
+		}
+	}
+}
+// 课程筛选页右边广告位
+.sideright-body{
+	padding: 0;
+	.sideright-ad{
+		margin-bottom: 20px;
+		img{
+			width: 100%;
+			height: auto;
+		}
+	}
+	.sideright-hotcourse{
+		h3{
+			font-size: 16px;
+			font-weight: normal;
 		}
 	}
 }
