热门课程样式调整

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -51,7 +51,7 @@ ul,li{list-style: none;}
 	font-family: "SimSun";
 	border-bottom: 1px solid @borderColor;
 	width: 100%;
-	padding: 12px 0px 0 0;
+	padding: 12px;
 	overflow: hidden;
 	.btn{
 		.border-radius(2px);
@@ -238,7 +238,7 @@ ul,li{list-style: none;}
 				float: left;
 			}
 			strong{
-				line-height: 34px;
+				line-height: 29px;
 				margin-left: 5px;
 			}
 			.test-price{
@@ -350,8 +350,8 @@ ul,li{list-style: none;}
 	color: #3bafda;
 }
 .hot-course-list{
-	padding: 10px 0;
-	background: #fcfcfc;
+	padding: 12px;
+	// background: #fcfcfc;
 	.ui-avatar{
 		margin-right: 10px;
 		width: 40px;
@@ -364,7 +364,7 @@ ul,li{list-style: none;}
 		}
 	}
 	.course-detail{
-		width: 78%;
+		width: 75%;
 		p{
 			margin: 3px 0;
 		}
