找老师页面合成
找老师页面合成

--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -38,7 +38,8 @@
 .findBreadCrumb{margin-top: 17px}
 .findClass{border: 1px solid #eaeaea;padding: 0;}
 .findClassRight{padding: 0;}
-.findRightTitle{font-size: 16px;color: #666;}
+.findRightList{margin-bottom: 20px;}
+.findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
 .find-teacher-list{overflow: hidden;}
 .find-teacher-list-container{overflow: hidden;width: 102%;margin-top: -1px;}
 .row{margin: 0;}
