课程列表样式更高

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -72,6 +72,7 @@ ul,li{list-style: none;}
 		width: 60px;
 		text-align: center;
 		float: left;
+		display: inline;
 		margin-right: 14px;
 		span.ui-user-name{
 			font-size: 14px;
@@ -125,7 +126,7 @@ ul,li{list-style: none;}
 		}
 	}
 	.course-detail{
-		float: left;
+		display: block;
 		overflow: hidden;
 		p{
 			margin: 8px 0;
@@ -355,6 +356,7 @@ ul,li{list-style: none;}
 	.ui-avatar{
 		margin-right: 10px;
 		width: 40px;
+		display: inline;
 		.avatar-photo{
 			width: 40px;
 			img{
@@ -364,7 +366,7 @@ ul,li{list-style: none;}
 		}
 	}
 	.course-detail{
-		width: 75%;
+		display: block;
 		p{
 			margin: 3px 0;
 		}
