--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -69,7 +69,7 @@
 	font-family: 'SimSun';
 	display: inline;
 	float: left;
-	margin-right: 0.28%;
+	margin-right: 10px;
 	overflow: hidden;
 	width: 290px;
 	padding-left: 0;
