--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -51,7 +51,7 @@ ul,li{list-style: none;}
 	font-family: "SimSun";
 	border-bottom: 1px solid @borderColor;
 	width: 100%;
-	padding: 12px;
+	padding: 20px 12px 12px 12px;
 	overflow: hidden;
 	.btn{
 		.border-radius(2px);
@@ -274,6 +274,7 @@ ul,li{list-style: none;}
 		font-family: 'Microsoft YaHei';
 		text-align: center;
 		padding-left: 0;
+		margin-top: 5px;
 		p{
 			font-size: 14px;
 			margin-bottom: 3px;
@@ -408,6 +409,7 @@ ul,li{list-style: none;}
 				float: left;
 			}
 			.course-static{
+				line-height: 20px;
 				.icon-people{
 					background: url("img/ic_username.png") no-repeat scroll left center;
 					display: inline-block;
@@ -420,6 +422,7 @@ ul,li{list-style: none;}
 				}
 				strong{
 					color: #e74c3c;
+					font-weight: normal;
 				}
 			}
 		}
